# box

./: .clang-format  .codex-session-notes  .gitignore  AGENTS.md  ANDROID.md  CMakeLists.txt  CODE_CONVENTIONS.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT_STRATEGY.md  Dockerfile.dev  Makefile  NEXT_STEPS.md  Package.resolved  Package.swift  README.md  SPECS.md  codex.sessions  codex_resume.txt  pki.sh  resume_codex.sh
.github/workflows/: ci.yml  sync-issues.yml
Plugins/BoxBuildInfoGenerator/: main.swift
Plugins/BoxBuildInfoPlugin/: BuildInfoPlugin.swift
android/: README.md
android/jni/: CMakeLists.txt  box_jni.c
android/sample/: build.gradle  gradle.properties  settings.gradle
android/sample/app/: build.gradle
android/sample/app/src/main/: AndroidManifest.xml
android/sample/app/src/main/java/org/box/: Native.java
android/sample/app/src/main/java/org/box/sample/: MainActivity.java
android/sample/app/src/main/res/layout/: activity_main.xml
android/sample/app/src/main/res/values/: strings.xml  themes.xml
bench/: bench_BFSharedArray.c  bench_BFSharedDictionary.c
box.xcodeproj/: project.pbxproj
box.xcodeproj/project.xcworkspace/xcuserdata/thierry.xcuserdatad/: UserInterfaceState.xcuserstate
box.xcodeproj/xcshareddata/xcschemes/: BoxFoundation.xcscheme  boxd.xcscheme  test_BFMemory.xcscheme  test_BFNetworkNoise.xcscheme
box.xcodeproj/xcuserdata/thierry.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/: shared_array.c  shared_dictionary.c
include/box/: BFAead.h  BFBoxProtocol.h  BFBoxProtocolV1.h  BFCommon.h  BFConfig.h  BFDtls.h  BFLogger.h  BFMemory.h  BFNetwork.h  BFRunloop.h  BFSharedArray.h  BFSharedDictionary.h  BFUdp.h  BFUdpClient.h  BFVersion.h  box.h  dtls.h  proto.c  proto.h  protocol.c  protocol.h
packaging/tmpfiles.d/: boxd.conf
scripts/: bump_version.swift  check_abbreviations.sh  check_format.sh  check_naming.sh  fast_build.sh  format.sh  sign-box.sh  test_dtls_cert_verify.sh
scripts/launchd/: com.box.server.plist
sources/box/: client.c
sources/boxd/: ServerAdmin.c  ServerAdmin.h  ServerEventType.h  ServerNetworkInput.c  ServerNetworkInput.h  ServerNetworkOutput.c  ServerNetworkOutput.h  ServerRuntime.h  server.c
sources/include/: BFBase64Codec.h  BFBoxProtocol.h  BFBoxProtocolV1.h  BFCommon.h  BFConfig.h  BFData.h  BFFileManager.h  BFNetwork.h  BFNumber.h  BFPropertyList.h  BFRunloop.h  BFSharedArray.h  BFSharedDictionary.h  BFStorageManager.h  BFString.h  BFUdp.h  BFUdpClient.h  BFUdpServer.h
sources/lib/: BFAead.c  BFBase64Codec.c  BFBoxProtocol.c  BFBoxProtocolV1.c  BFCommon.c  BFConfig.c  BFData.c  BFFileManager.c  BFNetwork.c  BFNetworkNoise.c  BFNetworkNoiseInternal.h  BFNetworkQuic.c  BFNumber.c  BFPropertyList.c  BFRunloop.c  BFSharedArray.c  BFSharedDictionary.c  BFStorageManager.c  BFString.c  BFUdpServer.c  BFVersion.c
src/box/: client.c  main.c
src/boxd/: main.c  server.c
src/include/: BFCommon.h  BFMemory.h  BFNetwork.h  BFSharedArray.h  BFSocket.h
src/lib/: BFAead.c  BFBoxProtocol.c  BFBoxProtocolV1.c  BFCommon.c  BFConfig.c  BFDtlsOpenSSL.c  BFLogger.c  BFMemory.c  BFNetwork.c  BFNetworkNoise.c  BFNetworkNoiseInternal.h  BFNetworkQuic.c  BFNetworkQuicInternal.h  BFRunloop.c  BFSharedArray.c  BFSharedDictionary.c  BFSocket.c  BFUdp.c  BFUdpClient.c  BFUdpServer.c  BFVersion.c  box.c  dtls_openssl.c  proto.c  protocol.c
swift/Sources/BoxApp/: main.swift
swift/Sources/BoxBuildInfoSupport/: BuildInfoExports.swift
swift/Sources/BoxClient/: BoxClient.swift
swift/Sources/BoxCommandParser/: BoxCommandParser.swift
swift/Sources/BoxCore/: AdminTransport.swift  BoxCodec.swift  BoxConfiguration.swift  BoxLogging.swift  BoxPaths.swift  BoxRuntime.swift  BuildInfoAlias.swift  EventLoopFuture+Async.swift  Integer+Extensions.swift  LocationServiceModels.swift  NoiseKeyStore.swift  StringUtils.swift  UncheckedSendableBox.swift
swift/Sources/BoxServer/: Admin+Helpers.swift  BoxAdminChannelHandle.swift  BoxAdminChannelHandler.swift  BoxAdminCommandDispatcher.swift  BoxAdminNamedPipeServer.swift  BoxAdminParsedCommand.swift  BoxServer.swift  BoxServerHandler.swift  BoxServerRuntimeController.swift  BoxServerRuntimeState.swift  BoxServerStore.swift  ConnectivitySnapshot.swift  LocationServiceCoordinator.swift  PortMappingCoordinator.swift  PortMappingError.swift  PortMappingUtilities.swift  QueueMetrics.swift  UPnPDeviceDescriptionParser.swift  UPnPServiceDescription.swift
swift/Tests/BoxAppTests/: BoxAdminDispatcherTests.swift  BoxAdminIntegrationTests.swift  BoxAppTests.swift  BoxCLIIntegrationTests.swift  BoxClientServerIntegrationTests.swift  BoxClientTests.swift  BoxConfigurationTests.swift  BoxLoggingTests.swift  BoxServerRuntimeControllerTests.swift  LocationServiceCoordinatorTests.swift  LocationServiceModelsTests.swift  NoiseKeyStoreTests.swift  PortMappingCoordinatorTests.swift  PortMappingUtilitiesTests.swift  TestServerContext.swift
systemd/: boxd.service
test/: test_BFAead.c  test_BFBase64Codec.c  test_BFBoxProtocol.c  test_BFBoxProtocolV1.c  test_BFData.c  test_BFFileManager.c  test_BFMemory.c  test_BFNetworkNoise.c  test_BFNumber.c  test_BFPropertyList.c  test_BFRunloop.c  test_BFSharedArray.c  test_BFSharedArrayStress.c  test_BFSharedDictionary.c  test_BFSharedDictionaryStress.c  test_BFStorageManager.c  test_BFString.c  test_proto.c  test_protocol.c
